name:                proto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/proto#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable proto
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , stm-conduit
                       , conduit-extra
                       , conduit-combinators
                       , word8
                       , bytestring
                       , async
                       , resourcet
                       , mtl
                       , text
                       , shell-conduit
                       , conduit
                       , stm
                       , stm-chans
